Fix translation and errors in TransactionCard

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -81,7 +81,6 @@
   "settings.newPassword": "New Password",
   "settings.confirmNewPassword": "Confirm New Password",
   "settings.changingPassword": "Changing...",
-  "settings.passwordChanged": "Password changed successfully",
   "settings.dangerZone": "Danger Zone",
   "settings.deleteAccount": "Delete Account",
   "settings.deleteAccountWarning": "Deleting your account is permanent and cannot be undone. Projects you own will be transferred to another admin or deleted if no other members exist.",
@@ -318,6 +317,7 @@
   "transactions.monthdayWarning": "Note: For months with fewer days, the last day of the month will be used.",
   "transactions.selectMonths": "Select months:",
   "transactions.fixedForInterval": "fixed for this interval",
+  "transactions.resetToDefault": "Reset to default",
   "transactions.endDateOptional": "End date (optional)",
   "transactions.occurrencesOptional": "Number of occurrences (optional)",
   "transactions.occurrencesPlaceholder": "e.g., 12",
