Translate split recurrent transaction strings

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -325,6 +325,11 @@
   "transactions.firstOccurrenceInfo": "First occurrence will be on {date}",
   "transactions.lastOccurrenceInfo": "Last occurrence will be on {date}",
   "transactions.splitAndUpdate": "Split & Update",
+  "transactions.split.applyFromDate": "Apply changes starting from date",
+  "transactions.split.changesStartFrom": "Changes start from",
+  "transactions.split.splitPlan": "Original payment will end on {endDate}, new payment will start on {startDate}.",
+  "transactions.split.beforeFirstOccurrence": "Date is before the first recurrence.",
+  "transactions.split.chooseDateHint": "Choose a date to see the split plan.",
   "transactions.recentTransactions": "Recent Transactions",
   "transactions.noTransactionsYet": "No transactions yet.",
   "transactions.viewReceipt": "View receipt",
