--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -325,6 +325,11 @@
   "transactions.firstOccurrenceInfo": "La première occurrence sera le {date}",
   "transactions.lastOccurrenceInfo": "La dernière occurrence sera le {date}",
   "transactions.splitAndUpdate": "Répartir et mettre à jour",
+  "transactions.split.applyFromDate": "Appliquer les modifications à partir d'une date",
+  "transactions.split.changesStartFrom": "Les modifications s'appliquent à partir du",
+  "transactions.split.splitPlan": "Le paiement original se terminera le {endDate}, le nouveau paiement commencera le {startDate}.",
+  "transactions.split.beforeFirstOccurrence": "La date est antérieure à la première occurrence.",
+  "transactions.split.chooseDateHint": "Choisissez une date pour voir le plan de répartition.",
   "transactions.recentTransactions": "Transactions récentes",
   "transactions.noTransactionsYet": "Aucune transaction pour le moment.",
   "transactions.viewReceipt": "Voir le reçu",
