WIP: Added a new budget page

--- a/frontend/src/lib/i18n/translations/en.json
+++ b/frontend/src/lib/i18n/translations/en.json
@@ -798,5 +798,58 @@
   "errors.invalidImageFormat": "Invalid image format. Only JPEG, PNG, GIF, and WebP are supported.",
 
   "errors.internalError": "An internal error occurred. Please try again later.",
-  "errors.databaseError": "A database error occurred. Please try again later."
+  "errors.databaseError": "A database error occurred. Please try again later.",
+  "errors.invalidPayFrequency": "Invalid pay frequency. Must be weekly, biweekly, semimonthly, or monthly.",
+  "errors.invalidHoursPerWeek": "Hours per week must be between 0 and 168.",
+
+  "budget.title": "Budget",
+  "budget.scope": "Scope",
+  "budget.allAccounts": "All accounts",
+  "budget.view": "View",
+  "budget.budgeted": "Budgeted",
+  "budget.observed": "Observed",
+  "budget.delta": "Delta",
+  "budget.year": "Year",
+  "budget.semester": "Semester",
+  "budget.month": "Month",
+  "budget.paycheck": "Paycheck",
+  "budget.week": "Week",
+  "budget.hour": "Hour",
+  "budget.income": "Income",
+  "budget.expenses": "Expenses",
+  "budget.net": "Net",
+  "budget.uncategorized": "Uncategorized",
+  "budget.overBudget": "over budget",
+  "budget.underBudget": "under budget",
+  "budget.addOverride": "Add adjustment",
+  "budget.promoteToBudget": "Add to budget",
+  "budget.payFrequency": "Pay frequency",
+  "budget.hoursPerWeek": "Hours/week",
+  "budget.weekly": "Weekly",
+  "budget.biweekly": "Bi-weekly",
+  "budget.semimonthly": "Semi-monthly",
+  "budget.monthly": "Monthly",
+  "budget.noData": "No budget data yet. Add recurring transactions or budget adjustments to get started.",
+  "budget.config": "Configuration",
+  "budget.overrides": "Adjustments",
+  "budget.noOverrides": "No budget adjustments yet.",
+  "budget.overrideType": "Type",
+  "budget.overrideAdd": "Add",
+  "budget.overrideAdjust": "Adjust",
+  "budget.overrideExclude": "Exclude",
+  "budget.overrideName": "Name",
+  "budget.overrideAmount": "Yearly amount",
+  "budget.overrideTag": "Tag",
+  "budget.comparison": "Comparison",
+  "budget.budgetedAmount": "Budgeted",
+  "budget.observedAmount": "Observed",
+  "budget.difference": "Difference",
+  "budget.frequencyAssumption": "Frequency assumption",
+  "budget.everyYear": "Every year",
+  "budget.every2Years": "Every 2 years",
+  "budget.every5Years": "Every 5 years",
+
+  "tags.label": "Tags",
+  "tags.placeholder": "Add tags...",
+  "tags.add": "Add tag"
 }
