--- a/frontend/src/lib/i18n/translations/fr.json
+++ b/frontend/src/lib/i18n/translations/fr.json
@@ -798,5 +798,58 @@
   "errors.invalidImageFormat": "Format d'image invalide. Seuls JPEG, PNG, GIF et WebP sont pris en charge.",
 
   "errors.internalError": "Une erreur interne s'est produite. Veuillez réessayer plus tard.",
-  "errors.databaseError": "Une erreur de base de données s'est produite. Veuillez réessayer plus tard."
+  "errors.databaseError": "Une erreur de base de données s'est produite. Veuillez réessayer plus tard.",
+  "errors.invalidPayFrequency": "Fréquence de paie invalide. Doit être hebdomadaire, bihebdomadaire, bimensuelle ou mensuelle.",
+  "errors.invalidHoursPerWeek": "Les heures par semaine doivent être entre 0 et 168.",
+
+  "budget.title": "Budget",
+  "budget.scope": "Portée",
+  "budget.allAccounts": "Tous les comptes",
+  "budget.view": "Vue",
+  "budget.budgeted": "Budgété",
+  "budget.observed": "Observé",
+  "budget.delta": "Écart",
+  "budget.year": "Année",
+  "budget.semester": "Semestre",
+  "budget.month": "Mois",
+  "budget.paycheck": "Paie",
+  "budget.week": "Semaine",
+  "budget.hour": "Heure",
+  "budget.income": "Revenus",
+  "budget.expenses": "Dépenses",
+  "budget.net": "Net",
+  "budget.uncategorized": "Non catégorisé",
+  "budget.overBudget": "au-dessus du budget",
+  "budget.underBudget": "en-dessous du budget",
+  "budget.addOverride": "Ajouter un ajustement",
+  "budget.promoteToBudget": "Ajouter au budget",
+  "budget.payFrequency": "Fréquence de paie",
+  "budget.hoursPerWeek": "Heures/sem.",
+  "budget.weekly": "Hebdomadaire",
+  "budget.biweekly": "Bihebdomadaire",
+  "budget.semimonthly": "Bimensuelle",
+  "budget.monthly": "Mensuelle",
+  "budget.noData": "Pas encore de données budgétaires. Ajoutez des transactions récurrentes ou des ajustements pour commencer.",
+  "budget.config": "Configuration",
+  "budget.overrides": "Ajustements",
+  "budget.noOverrides": "Pas encore d'ajustements budgétaires.",
+  "budget.overrideType": "Type",
+  "budget.overrideAdd": "Ajouter",
+  "budget.overrideAdjust": "Ajuster",
+  "budget.overrideExclude": "Exclure",
+  "budget.overrideName": "Nom",
+  "budget.overrideAmount": "Montant annuel",
+  "budget.overrideTag": "Étiquette",
+  "budget.comparison": "Comparaison",
+  "budget.budgetedAmount": "Budgété",
+  "budget.observedAmount": "Observé",
+  "budget.difference": "Différence",
+  "budget.frequencyAssumption": "Hypothèse de fréquence",
+  "budget.everyYear": "Chaque année",
+  "budget.every2Years": "Tous les 2 ans",
+  "budget.every5Years": "Tous les 5 ans",
+
+  "tags.label": "Étiquettes",
+  "tags.placeholder": "Ajouter des étiquettes...",
+  "tags.add": "Ajouter une étiquette"
 }
